<resources>
    <string name="app_name">Paradise Player</string>
    <string name="paradise_lights">Paradise Lights</string>
    <string name="genre">Genre</string>
    <string name="play">Play</string>
    <string name="go_to_artist">Go To Artist</string>
    <string name="title_activity_see_artist">seeArtist</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dove_dive">Dove Dive</string>
    <string name="lite_heart">Lite Heart</string>
    <string name="stop">Stop</string>
    <string name="splash">Splash</string>
</resources>
