<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".seeArtist">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/seeArtistLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/stp_btn_splash"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="90dp"
            android:text="@string/stop"
            app:layout_constraintBottom_toTopOf="@+id/danceFireStpBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/selectSong"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/danceFirePlyBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="320dp"
            android:text="Play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/danceFireStpBtn"
            app:layout_constraintStart_toEndOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/selectSong" />

        <EditText
            android:id="@+id/splashTxt"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/splash"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintEnd_toStartOf="@+id/selectSong"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/selectSong"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="90dp"
            android:text="@string/play"
            app:layout_constraintBottom_toTopOf="@+id/danceFirePlyBtn"
            app:layout_constraintEnd_toStartOf="@+id/stp_btn_splash"
            app:layout_constraintStart_toEndOf="@+id/splashTxt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.523" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="309dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Dance Fire"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/danceFirePlyBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splashTxt" />

        <Button
            android:id="@+id/danceFireStpBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="320dp"
            android:text="Stop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/danceFirePlyBtn"
            app:layout_constraintTop_toBottomOf="@+id/stp_btn_splash" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:id="@+id/fab"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="bottom|end"-->
    <!--        android:layout_margin="@dimen/fab_margin"-->
    <!--        app:srcCompat="@android:drawable/ic_dialog_email" />-->

</RelativeLayout>